@@ -1,6 +1,6 @@
 /* dline_conf.h  -- lets muse over dlines, shall we?
  *
- * $Id: dline_conf.h,v 1.4 2000/10/06 03:00:56 lusky Exp $ 
+ * $Id: dline_conf.h,v 1.5 2001/07/18 01:37:05 lusky Exp $ 
  */
 
 #ifndef INCLUDED_dline_conf_h
@@ -9,8 +9,8 @@
 struct Client;
 struct ConfItem;
 
-extern void clear_Dline_table();
-extern void zap_Dlines();
+extern void clear_Dline_table(void);
+extern void zap_Dlines(void);
 extern void add_Dline(struct ConfItem *);
 extern void add_ip_Kline(struct ConfItem *);
 extern void add_ip_Eline(struct ConfItem *);
