@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *  $Id: client.c,v 1.65 2001/07/10 12:40:31 jdc Exp $
+ *  $Id: client.c,v 1.66 2001/07/16 02:18:49 leeh Exp $
  */
 #include "client.h"
 #include "class.h"
@@ -29,6 +29,7 @@
 #include "common.h"
 #include "dline_conf.h"
 #include "fdlist.h"
+#include "flud.h"
 #include "hash.h"
 #include "irc_string.h"
 #include "ircd.h"
