@@ -19,7 +19,7 @@
  *
  *  (C) 1988 University of Oulu, Computing Center and Jarkko Oikarinen
  *
- * $Id: list.c,v 1.40 1999/08/10 02:46:24 lusky Exp $
+ * $Id: list.c,v 1.41 2000/11/18 19:11:11 lusky Exp $
  */
 #include "struct.h"
 #include "blalloc.h"
@@ -66,7 +66,7 @@
 
 #define USERS_PREALLOCATE 1024
 
-void    outofmemory();
+void    outofmemory(void);
 
 /* for Wohali's block allocator */
 BlockHeap *free_Links;
